[iOS] Fix video in WebGL. https://bugs.webkit.org/show_bug.cgi?id=133511

Reviewed by Jer Noble.

* WebCore.exp.in:
* platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
(WebCore::MediaPlayerPrivateAVFoundationObjC::hasSingleSecurityOrigin):
(WebCore::wkAVAssetResolvedURL): Deleted.
* platform/mac/WebCoreSystemInterface.h:
* platform/mac/WebCoreSystemInterface.mm:
Declare and use resolvedURL on AVURLAsset instead of using wkAVAssetResolvedURL through WebKitSystemInterface.



Canonical link: https://commits.webkit.org/152154@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170295 268f45cc-cd09-0410-ab3c-d52691b4dbfc